nodejs/versioned_docs/version-1.17-rc.1/api/class-mouse.mdx
---
id: class-mouse
title: "Mouse"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.

Every `page` object has its own Mouse, accessible with [page.mouse](./api/class-page.mdx#page-mouse).

```js
// Using ‘page.mouse’ to trace a 100x100 square.
await page.mouse.move(0, 0);
await page.mouse.down();
await page.mouse.move(0, 100);
await page.mouse.move(100, 100);
await page.mouse.move(100, 0);
await page.mouse.move(0, 0);
await page.mouse.up();
```


- [mouse.click(x, y[, options])](./api/class-mouse.mdx#mouse-click)
- [mouse.dblclick(x, y[, options])](./api/class-mouse.mdx#mouse-dblclick)
- [mouse.down([options])](./api/class-mouse.mdx#mouse-down)
- [mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move)
- [mouse.up([options])](./api/class-mouse.mdx#mouse-up)
- [mouse.wheel(deltaX, deltaY)](./api/class-mouse.mdx#mouse-wheel)

## mouse.click(x, y[, options]) {#mouse-click}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-x"/> &#60;[number]&#62;<a href="#mouse-click-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-y"/> &#60;[number]&#62;<a href="#mouse-click-option-y" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-click-option-button" class="list-anchor">#</a>
  - `clickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-click-count"/> &#60;[number]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-click-option-click-count" class="list-anchor">#</a>
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-delay"/> &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-click-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-click-return" class="list-anchor">#</a>

Shortcut for [mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move), [mouse.down([options])](./api/class-mouse.mdx#mouse-down), [mouse.up([options])](./api/class-mouse.mdx#mouse-up).

## mouse.dblclick(x, y[, options]) {#mouse-dblclick}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-x"/> &#60;[number]&#62;<a href="#mouse-dblclick-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-y"/> &#60;[number]&#62;<a href="#mouse-dblclick-option-y" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-dblclick-option-button" class="list-anchor">#</a>
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-delay"/> &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-dblclick-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-dblclick-return" class="list-anchor">#</a>

Shortcut for [mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move), [mouse.down([options])](./api/class-mouse.mdx#mouse-down), [mouse.up([options])](./api/class-mouse.mdx#mouse-up), [mouse.down([options])](./api/class-mouse.mdx#mouse-down) and [mouse.up([options])](./api/class-mouse.mdx#mouse-up).

## mouse.down([options]) {#mouse-down}
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-down-option-button" class="list-anchor">#</a>
  - `clickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-click-count"/> &#60;[number]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-down-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-down-return" class="list-anchor">#</a>

Dispatches a `mousedown` event.

## mouse.move(x, y[, options]) {#mouse-move}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-x"/> &#60;[number]&#62;<a href="#mouse-move-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-y"/> &#60;[number]&#62;<a href="#mouse-move-option-y" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `steps`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-steps"/> &#60;[number]&#62; defaults to 1. Sends intermediate `mousemove` events.<a href="#mouse-move-option-steps" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-move-return" class="list-anchor">#</a>

Dispatches a `mousemove` event.

## mouse.up([options]) {#mouse-up}
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-up-option-button" class="list-anchor">#</a>
  - `clickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-click-count"/> &#60;[number]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-up-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-up-return" class="list-anchor">#</a>

Dispatches a `mouseup` event.

## mouse.wheel(deltaX, deltaY) {#mouse-wheel}
- `deltaX`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-x"/> &#60;[number]&#62; Pixels to scroll horizontally.<a href="#mouse-wheel-option-delta-x" class="list-anchor">#</a>
- `deltaY`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-y"/> &#60;[number]&#62; Pixels to scroll vertically.<a href="#mouse-wheel-option-delta-y" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-return"/> &#60;[Promise]<[void]>&#62;<a href="#mouse-wheel-return" class="list-anchor">#</a>

Dispatches a `wheel` event.

:::note
Wheel events may cause scrolling if they are not handled, and this method does not wait for the scrolling to finish before returning.
:::


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
